# tokeye

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  environment.yml  launch_app.py  main.py  pyproject.toml  ruff.toml
.github/workflows/: python-package.yml
assets/: example.webm
data/autoprocess/settings/: shots_foundation10.txt  shots_foundation5.txt
data/extra/D3D/: README.md  ece_rolloff.csv
deploy/omega/: README.md  about.txt  ensure-env.sh  environment-omega.yml  install-home.sh  tokeye-app.sh  tokeye-connect.sh
deploy/omega/modulefiles/: tokeye.lua
deploy/princeton/: README.md  setup.sh  tokeye-app.sh
deploy/princeton/modulefiles/: tokeye.tcl
docs/: ROADMAP.md  ablation_paper_data.md  annotate_tab_usage.md  diiid.md  diiid_performance.md  diiid_tab_usage.md  omega-cluster.md  princeton-cluster.md  princeton_tab_usage.md
docs/superpowers/plans/: 2026-05-28-tokeye-ablation.md
docs/superpowers/specs/: 2026-05-28-tokeye-ablation-design.md
examples/: processing_demo.py
model/: README.md
scripts/: README.md  test_ablation_smoke.py  test_pipeline.py  upload_model.py
scripts/commands/: eval_DCLDE.sh  eval_DCLDE_energy.sh  eval_RadDet.sh  eval_RadDet_ablation.sh  eval_RadDet_energy.sh  nnunet.sh  nnunet0.sh  nnunetinfer.sh  nnunetval.sh  step_2b.sh  step_3.sh  step_6b.sh  step_6d.sh
scripts/commands/ablation/: eval.sh  recover.sh  shared.sh  shared_foundation.sh  shared_raw.sh  step2b_cpu.sh  variant.sh
scripts/commands/multiscale/: final_combined.sh  launch_all.sh  step0_shared.sh  step0c_modalities.sh  step2_cpu.sh  step3_gpu.sh  step4_5_6a_cpu.sh  step6_gpu.sh
scripts/eval/: DCLDE2011.ipynb  DCLDE2011.py  DCLDE2011_energy_analysis.py  DCLDE2011_event.py  RadDet.py  RadDet_ablation.py  RadDet_energy_analysis.py  TJII2021.ipynb  TJII2021.py  TJII2021_ablation.py  TJII2021_energy_analysis.py  ablation_figure.py  figures.py  make_D3D2025.ipynb  make_D3D2025.py  paper_figures.py  paper_tables.py  per_class_figure.py  pr_figure.py  tjii_ablation_figure.py
scripts/usage/: ae_tf_maskrcnn.ipynb  big_tf_unet.ipynb
src/TokEye/: __init__.py  exceptions.py
src/TokEye/app/: __main__.py
src/TokEye/app/analyze/: analyze.py  load.py  visualize.py
src/TokEye/app/processing/: tiling.py
src/TokEye/app/utils/: analyze.py
src/TokEye/autoprocess/: step_7b_train_multiscale.py
src/TokEye/autoprocess/binary/: step_3b_extract_correlation.py
src/TokEye/autoprocess/multichannel/: step_0a_extract_faithdata.py  step_0b_filter_faithdata.py  step_0c_convert_faithdata.py  step_1a_make_timeseries.py  step_2a_make_spectrogram.py  step_2b_filter_spectrogram.py  step_3a_correlation_analysis.py  step_4a_threshold.py  step_5a_combine_spectrogram.py  step_6a_convert_tif.py  step_6b_refiner.py  step_6c_convert_predictions.py  step_6d_final.py
src/TokEye/autoprocessor/multichannel/: step_0b_filter_faithdata.py  step_0c_convert_faithdata.py  step_3a_correlation_analysis.py  step_3b_extract_correlation.py  step_3c_coherence.py  step_5a_combine_spectrogram.py  step_5b_manual_fix_spectrogram.py  step_6b_refiner.py  step_6c_convert_predictions.py  step_6d_final.py
src/TokEye/extra/D3D/: ece_rolloff.py
src/TokEye/gradio/: __main__.py
src/TokEye/gradio/analyze/: analyze.py
src/TokEye/gradio/tabs/: analyze.py  annotate.py  utilities.py
src/TokEye/models/: __init__.py  unet.py
src/TokEye/models/modules/: nn.py
src/TokEye/processing/: __init__.py  cache.py  inference.py  postprocess.py  tiling.py  transforms.py
src/TokEye/terminal/: __init__.py
src/tokeye/: __init__.py  api.py  batch.py  cli.py  examples.py  export.py  hub.py  inference.py  transforms.py
src/tokeye/alfvenspec/: __init__.py  inference.py
src/tokeye/analysis/: batch_analysis.py
src/tokeye/app/: __main__.py
src/tokeye/app/analyze/: analyze.py  load.py  transforms.py  visualize.py
src/tokeye/app/processing/: postprocess.py
src/tokeye/app/tabs/: annotate.py  diiid.py  diiid_modespec.py  diiid_offline.py  princeton.py  utilities.py
src/tokeye/app/utils/: theme.py
src/tokeye/cli/: __init__.py  __main__.py  _errors.py  alfvenspec.py  app.py  diiid_batch.py  download.py  eigspec.py  elmspec.py  example.py  fetch.py  gui.py  modesearch.py  modespec.py  princeton_batch.py  run.py
src/tokeye/eigspec/: PROVENANCE.md  __init__.py  cli.py
src/tokeye/eigspec/io/: __init__.py  (+5 more)
src/tokeye/elmspec/: __init__.py  events.py
src/tokeye/gui/: __init__.py  __main__.py  app.py  main_window.py  model_service.py  render.py  theme.py  workers.py
src/tokeye/models/: 202512_ae_faster.py  202512_ae_mask.py
src/tokeye/modesearch/: README.md  __init__.py
src/tokeye/modespec/: __init__.py
src/tokeye/sources/: __init__.py  base.py  co2.py  ece.py  factory.py  foundation.py  foundation_presets.py  mds.py  mirnov.py  presets.py  viz.py
src/tokeye/terminal/: batch_analysis.py
tests/: conftest.py  test_ablation_eval_aggregate.py  test_ablation_matrix.py  test_ablation_orchestrator_paths.py  test_alfvenspec.py  test_api.py  test_app_analyze_tab.py  test_app_annotate_tab.py  test_app_diiid_tab.py  test_app_load.py  test_app_main.py  test_app_princeton_tab.py  test_app_utilities_tab.py  test_basic.py  test_batch.py  test_big_tf_unet_2.py  test_btn_mag.py  test_cli.py  test_cli_suite.py  test_deploy_scripts.py  test_deploy_scripts_princeton.py  test_diiid_batch.py  test_eigspec.py  test_elmspec.py  test_events.py  test_examples.py  test_export.py  test_gui_controls.py  test_gui_model_service.py  test_gui_modespec.py  test_gui_render.py  test_gui_spectrogram.py  test_hub.py  test_import_hygiene.py  test_inference.py  test_modespec_classic.py  test_postprocess.py  test_princeton_batch.py  test_sources.py  test_sources_foundation.py  (+7 more)
(+191 files in other folders)
