[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "tokeye"
version = "0.12.0"
description = "Automatic classification and localization of fluctuating signals in spectrograms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "torch",
    "torchvision",
    "torchinfo",
    "omegaconf",
    "pydantic",
    "huggingface-hub>=0.30",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
app = [
    "gradio",
    "plotly",
]
gui = [
    # PySide6 >=6.10 ships only glibc>=2.34 wheels; Omega (RHEL 8) and other
    # manylinux_2_28 hosts need <6.10 for `pip install tokeye[gui]`. 6.9.x is
    # fully sufficient here. (The conda deploy in deploy/omega/ may use newer.)
    "PySide6<6.10",
    "pyqtgraph",
]
eigspec = [
    "scikit-learn",
]
train = [
    "ipykernel",
    "ipywidgets",
    "h5py",
    "wavio",
    "joblib",
    "lightning",
    "torchaudio",
    "torchmetrics",
    "scikit-learn",
    "scikit-image",
    "pybaselines",
    "tifffile",
    "pandas",
    "tables",
    "kneed",
    "threadpoolctl",
]

[project.scripts]
tokeye = "tokeye.cli:main"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "tokeye"
module-root = "src"

[dependency-groups]
dev = [
    "ty",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "pre-commit",
]
train = [
    "ipykernel",
    "ipywidgets",

    "h5py",
    "wavio",
    "joblib",

    "lightning",
    "torchaudio",
    "torchmetrics",

    "scikit-learn",
    "scikit-image",

    "pybaselines",
    "tifffile",
    "pandas",
    "tables",

    "kneed",
    "threadpoolctl",
]
