[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "tokeye"
version = "0.12.0"
description = "Automatic classification and localization of fluctuating signals in spectrograms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    # PyTorch 2.11 dropped Volta/V100 (sm_70) from its CUDA wheels; DIII-D's
    # omega GPU partition is V100 (gres=gpu:v100). 2.10 is the last release
    # that runs there on GPU. Lift when the deploy targets newer hardware.
    "torch<2.11",
    "torchvision",  # follows torch via torchvision's own exact torch pin
    "torchinfo",
    "omegaconf",
    "pydantic",
    "huggingface-hub>=0.30",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
app = [
    # gradio 6 removes Image(show_download_button=...) (used in app/__main__.py)
    # and moves theme=/css= from Blocks() to launch() — the app is 5.x-only.
    "gradio>=5.49,<6",
    "plotly",
]
gui = [
    # PySide6 >=6.10 ships only glibc>=2.34 wheels; Omega (RHEL 8) and other
    # manylinux_2_28 hosts need <6.10 for `pip install tokeye[gui]`. 6.9.x is
    # fully sufficient here. (The conda deploy in deploy/omega/ may use newer.)
    "PySide6<6.10",
    "pyqtgraph",
]
eigspec = [
    "scikit-learn",
]
train = [
    "ipykernel",
    "ipywidgets",
    "h5py",
    "wavio",
    "joblib",
    "lightning",
    "torchaudio<2.11",  # match torch<2.11 (2.11 dropped its torch-version metadata)
    "torchmetrics",
    "scikit-learn",
    "scikit-image",
    "pybaselines",
    "tifffile",
    "pandas",
    "tables",
    "kneed",
    "threadpoolctl",
]

[project.scripts]
tokeye = "tokeye.cli:main"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "tokeye"
module-root = "src"

[dependency-groups]
dev = [
    "ty",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "pre-commit",
]
train = [
    "ipykernel",
    "ipywidgets",

    "h5py",
    "wavio",
    "joblib",

    "lightning",
    "torchaudio<2.11",  # match torch<2.11 (2.11 dropped its torch-version metadata)
    "torchmetrics",

    "scikit-learn",
    "scikit-image",

    "pybaselines",
    "tifffile",
    "pandas",
    "tables",

    "kneed",
    "threadpoolctl",
]
